# wood-detection-task

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker.yml
include/: board_inference.hpp  evaluator.hpp  frame_loader.hpp  io.hpp  visualizer.hpp  yolo_session.hpp
model/: yolo26m.onnx
src/: board_inference.cpp  evaluator.cpp  frame_loader.cpp  io.cpp  main.cpp  visualizer.cpp  yolo_session.cpp
wood-dataset/test/labels/: 1041_0.txt  1041_1.txt  1041_10.txt  1041_11.txt  1041_13.txt  1041_14.txt  1041_15.txt  1041_19.txt  1041_2.txt  1041_20.txt  1041_21.txt  1041_22.txt  1041_24.txt  1041_25.txt  1041_26.txt  1041_27.txt  1041_29.txt  1041_3.txt  1041_30.txt  1041_31.txt  1041_32.txt  1041_33.txt  1041_4.txt  1041_5.txt  1041_6.txt  1041_7.txt  1041_8.txt  1041_9.txt  1049_0.txt  1049_1.txt  1049_10.txt  1049_11.txt  1049_12.txt  1049_13.txt  1049_14.txt  1049_15.txt  1049_16.txt  1049_17.txt  1049_18.txt  1049_19.txt  (+812 more)
